--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,34 @@
     overflow-x: hidden;
     list-style-type: none;
     text-decoration: none;
+    font-family: sans-serif;
 }
 
+nav{
+    width: 100%;
+    padding: 1rem 0;
+    background-color: rgb(22, 0, 31);
+}
+
+.nav-width{
+    width: 1200px;
+    margin: 0 auto;
+    /* border: 2px solid green; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    color: white;
+    font-size: 2rem;
+}
+
+nav ul{
+    display: flex;
+}
+nav ul li a{
+    color: rgb(179, 179, 179);
+    text-transform: uppercase;
+    padding-left: 1rem;
+}
