--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,47 @@
     text-decoration: none;
     font-family: sans-serif;
 }
+h1{
+    font-size: 3rem;
+    color: white;
+    /* padding-bottom: 1rem; */
+}
 
+h3{
+    font-size: 1.5rem;
+    color: white;
+    opacity: 0.7;
+    font-weight: 400;
+    padding: 2rem 0;
+}
+
+.btn{
+    background-color: rgb(255, 123, 0);
+    border: none;
+    padding: 1rem 2rem;
+    color: white;
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.home{
+    width: 100%;
+    height: 150vh;
+    background-color: rgb(31, 0, 43);
+}
 nav{
     width: 100%;
+    position: fixed;
     padding: 1rem 0;
-    background-color: rgb(22, 0, 31);
+    background-color: rgb(12, 0, 17);
+    z-index: 100;
 }
 
 .nav-width{
     width: 1200px;
     margin: 0 auto;
-    /* border: 2px solid green; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,4 +65,14 @@ nav ul li a{
     color: rgb(179, 179, 179);
     text-transform: uppercase;
     padding-left: 1rem;
+}
+.container{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.hero-section{
+    padding: 10rem 5rem 0;
+    /* border: 4px solid red; */
+    text-align: center;
 }
