--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,30 @@
 *{
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
     box-sizing: border-box;
     overflow-x: hidden;
     list-style-type: none;
     text-decoration: none;
     font-family: sans-serif;
 }
+
+span{
+    color: rgb(255, 123, 0);
+}
 h1{
-    font-size: 3rem;
+    font-size: 3.5rem;
     color: white;
     /* padding-bottom: 1rem; */
 }
-
 h3{
+    font-size: 1.5rem;
+    /* color: white; */
+    font-weight: 400;
+    padding: 2rem 0 .5rem;
+}
+h2{
+    line-height: 2rem;
     font-size: 1.5rem;
     color: white;
     opacity: 0.7;
@@ -21,6 +32,16 @@ h3{
     padding: 2rem 0;
 }
 
+p{
+    color: white;
+    opacity: 0.7;
+    line-height: 1.5rem;
+}
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .btn{
     background-color: rgb(255, 123, 0);
     border: none;
@@ -30,28 +51,25 @@ h3{
     font-weight: 700;
     cursor: pointer;
     border-radius: 5px;
+    margin: 2rem 0 ;
 }
 
 .home{
     width: 100%;
-    height: 150vh;
-    background-color: rgb(31, 0, 43);
+    height: 100vh;
+    background: linear-gradient(rgba(0, 4, 37, 0.9), rgba(0, 4, 37, 0.9)), url(laptop-business-man-from-above-it-expert.jpg);
+    background-position: center;
+    background-size: cover;
+    /* background-color: rgb(0, 4, 37); */
 }
 nav{
     width: 100%;
     position: fixed;
     padding: 1rem 0;
-    background-color: rgb(12, 0, 17);
+    background-color: rgb(0, 1, 14);
     z-index: 100;
 }
 
-.nav-width{
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
 .logo{
     color: white;
@@ -75,4 +93,23 @@ nav ul li a{
     padding: 10rem 5rem 0;
     /* border: 4px solid red; */
     text-align: center;
+}
+
+
+/* ---  About Section  --- */
+
+.about{
+    padding-top: 10rem;
+    background-color: rgb(0, 4, 37);
+    /* height: 100vh; */
+}
+
+.about-text{
+    width: 50%;
+}
+
+.about-img{
+    width: 450px;
+    /* border: 3px solid red; */
+    border-radius: 10px;
 }
